Prueba Thymeleaf con ArrayList

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ logging.pattern.dateformat = hh:mm
 spring.main.banner-mode = off 
 #para visualizar los cambios 
 spring.thymeleaf.cache = false
+#otro mensaje desde index
+index.saludo = Adios desde application.properties
